
	-- New Cards : Not Implemented
	All cards that add CRIT bonus vs. specific race is now applied
	 at 2x rate when installed on a Katar-type weapon.
	 EX) If Goblin Archer card goes on a Katar-type weapon, the CRIT Bonus vs. Undeads become +14.
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: missing getzenybychance?? (ADDED TEMP PLUG - GETS 1 ZENY ON KILL)

08/22
	* Added 0.5 sec delay to Aid Potion, 1 sec casting time & delay to Aid Condensed Potion
	  (from kRO website, thanks to reddozen and vicious_pucca) [DracoRPG]
	* Removed UF_NOFOOTSET from Ice Wall (I have several souces for that) [DracoRPG]
	* Removed slot from nile_rose (All stats +5, event version), added slot to nile_rose_
	  (MaxHP +10, permanent version) [DracoRPG]
	* Added complete (except TK_MISSION) Taekwon skill tree & skill DBs entries [DracoRPG]
08/19
	* Fixed Double Attack's pl not being -1 (take weapon's element) [Skotlex]
08/18
	* Changed sell price of unknown test tube to 0 as it can be abused for a
	  zeny exploit (thanks to Kayla for pointing it out) [Skotlex]
	* Changes to Immaterial Sword (drain 1SP, not 1%SP per attack)
	* Fixed Battleground Textbook, Greatest General Card to cast on yourself
	  (again) [Skotlex]
	* Changed Emperium to Holy 1 / Angel [DracoRPG]
	* Changed (again!) Gloria Domini to 'misc' [DracoRPG]
	* Changed pl of all 'weapon' attack skills that take weapon's element from '0' to '-1',
	  according to the new system. Also changed type of various skills. [DracoRPG]
	* Bah, refixed Owl Duke Card/Enchanted Peach Tree. [Skotlex]
	  The last value of bonus4 bAutoSpell defines target (0 = self, 1 = enemy)
	* Added new items, thanks to Landarma [Lupus
08/17
	* Changed back Soul Collect/Zen's casting time to 2 sec... [Skotlex]
	* Changed Gloria Domini & Martyr's Reckogning from 'magic' to 'weapon', Battle Chant from
	  'magic' to 'misc' [DracoRPG]
	* Added IDs of Taekwon and its 2nd jobs to const.txt [DracoRPG]