@@ -1,7 +1,8 @@
 // ID,unit ID,unit ID 2,layout,range,interval,target,flag
 //
 // layout = -1:special, 0:1*1, 1:3*3, 2:5*5, up to 5:11*11
-// target = friend / party / all / enemy
+// target = friend (party +guildmates +neutral players) / party /
+//          ally (party +guildmates) / all / enemy
 // flag 0x001(UF_DEFNOTENEMY)		Affected by 'defunit_not_enemy'
 //      0x002(UF_NOREITERRATION)	Spell cannot be stacked
 //      0x004(UF_NOFOOTSET)		Spell cannot be cast near/on targets
